# MPI4pyDynamoDB

./: .gitignore  README.md  pyproject.toml
src/: db.py  db_test.py  msg_helper.py  test_script.sh
