[project]
name = "dynamodb"
version = "0.1.0"
description = ""
authors = [
    {name = "rpeter54",email = "rileyap02@gmail.com"}
]
readme = "README.md"
requires-python = "<3.12,>=3.10.*"
dependencies = [
    "mpi4py (>=4.0.3,<5.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
